# ghcount

./: .env.example  .env.sample  Cargo.toml  README.md  spec.md  teams.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  system_environment.md  task_completion_workflow.md
src/: main.rs
tests/: integration_tests.rs
