[package]
name = "ghcount"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
walkdir = "2.3"
regex = "1.0"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.0"